# Praxis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: security.yml
config/: example_config.yaml  secrets.template.json
docs/: API_REFERENCE.md  BACKTEST_GUIDE.md  EVENT_EFFECT_GUIDE.md  METHODOLOGY.md  OUTLIER_PATTERNS.md  QUICKSTART.md  landing.html
examples/: budget_rolling.py  logistics_demand.py  retail_sales.py  saas_mrr.py
praxis/: __init__.py  utils.py
praxis/analysis/: __init__.py  dow_learner.py  entity_tier.py  event_learner.py  growth.py
praxis/backtest/: __init__.py  runner.py  scoring.py
praxis/calendar/: __init__.py  engine.py  holidays.py  periods.py  qa.py
praxis/data/: __init__.py  duckdb.py  ingestion.py  schema.py
praxis/forecast/: __init__.py  baseline.py  conformal.py  ensemble.py  features.py  lgbm.py
tests/: test_backtest.py  test_calendar.py  test_conformal.py  test_data.py  test_event_learner.py  test_growth.py  test_lgbm.py
