[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praxis-engine"
version = "0.1.0"
description = "Operating Intelligence Engine — calendar-aligned forecasting, growth decomposition, conformal uncertainty, and backtest governance in one package."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "StartripAI" },
]
keywords = [
    "forecasting",
    "time-series",
    "business-intelligence",
    "conformal-prediction",
    "calendar-alignment",
    "growth-decomposition",
    "backtest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "duckdb>=1.0,<2.0",
    "statsforecast>=2.0",
    "chinese-calendar>=1.10",
    "holidays>=0.40",
    "lightgbm>=4.0,<5.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
full = [
    "darts>=0.28",
    "tsfresh>=0.20",
    "mapie>=0.8",
    "greykite>=0.4",
    "tfcausalimpact>=0.1",
    "featuretools>=1.28",
    "autots>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/StartripAI/Praxis"
Repository = "https://github.com/StartripAI/Praxis"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
